@@ -1,5 +1,6 @@
 0.29
  - Add PETRIS CPAN account.
+ - Add PKUBANEK CPAN account.
 
 0.28 2021-03-19T18:08:11+01:00
  - Add CONTYK CPAN account.
